added token header to every request
